Remove application and distribution gradle plugins